# moflow

./: AUTHORS  Dockerfile  README.md
bap/: INSTALL  LICENSE.GPL  Makefile.am  NEWS  README  README.md  TODO  Vagrantfile  autogen.sh  build_bap.sh  configure.ac
bap/batteries/: Makefile
bap/batteries/src/: batUnix.mliv
bap/custom_utils/: makefile
bap/custom_utils/egas/: apps.ml  makefile  out.bpt  tree.dot
bap/doc/: main.tex
bap/doc/chap-examples/: Makefile  basic.S  basic.il  basic_mod.il  conceval.tex  functions.tex  il.tex  test  test.il  traces.tex
bap/doc/chap-formalism/: language.tex  syntax-table.tex  (+2 more)
bap/libasmir/: Makefile.am
bap/libtracewrap/: Makefile.in
bap/ocaml/: Makefile.in  OCamlMakefile  arch.ml  arch.mli  arithmetic.ml  asmir.ml  asmir.mli  asmir_consts.ml  asmir_disasm.ml  asmir_disasm.mli  asmir_rdisasm.ml  asmir_vars.ml  ast.ml  ast_cond_simplify.ml  ast_cond_simplify.mli  ast_convenience.ml  ast_slice.ml  ast_visitor.ml  big_int_convenience.ml  cfg.ml  cfg.mli  cfgDataflow.ml  cfgDataflow.mli  cfg_ast.ml  cfg_ast.mli  cfg_pp.ml  cfg_ssa.ml  cfg_ssa.mli  checks.ml  checks.mli  coalesce.ml  coalesce.mli  copy_prop.ml  copy_prop.mli  deadcode.ml  debug.ml  debug.mli  depgraphs.ml  depgraphs.mli  disasm.ml  (+88 more)
bap/ocaml-proj.example/: Makefile  deployproj.sh
bap/ocamlgraph/: Makefile.in
bap/pintraces/: Makefile.in  gentrace.cpp  getpin.sh  makefile.rules  pin_misc.cpp  pin_misc.h  pin_syscalls.h  pin_taint.cpp  pin_taint.h  pin_trace.h  pivot.cpp  pivot.h  reg_mapping_pin.cpp  snapshot.cpp
bap/piqi-files/: stmt.piqi  type.piqi
bap/solvers/: getz3.sh  makefile.inc
bap/tests/: Makefile.in  asmir_suite.ml  bap_suite.ml  disasm_i386_suite.ml  djgraph_suite.ml  eval_suite.ml  havlak_suite.ml  il_suite.ml  lnf_test.ml  opts_suite.ml  predicate_suite.ml  reduced_havlak_suite.ml  sreedhar_suite.ml  steensgard_suite.ml  traces_suite.ml  unroll_suite.ml  vsa_suite.ml
bap/tests-proj.example/: project_suite.ml
bap/utils/: Makefile.in  backtaint.ml  codegen.ml  get_functions.ml  identify_loops.ml  ileval.ml  iltrans.ml  streamtrans.ml  toil.ml  topredicate.ml
bap/utils-proj.example/: Makefile  testutil.ml
bap/vagrant/: bootstrap.sh
bap/zarith/: project.mak
(+121 files in other folders)
